added new size to overlay-image on small screens

--- a/src/app/technologies/technologies-media-queries.scss
+++ b/src/app/technologies/technologies-media-queries.scss
@@ -60,6 +60,11 @@
     line-height: 100%;
     letter-spacing: 0%;
   }
+
+  .overlay-img {
+    width: 130px !important;
+    height: 80px !important;
+  }
 }
 
 @media (max-width: 375px) {
