added htaccess-file and fixed bug that did not display the favicon

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
 	<a href="#top-header">
 		<div class="footer-logo-container">
 			<div class="footer-logo-img">
-				<img src="favicon_dark_theme.png" alt="Logo">
+				<img src="/favicon_dark_theme.png" alt="Logo">
 			</div>
 			<div class="footer-name-container">
 				<div class="footer-logo-first-name">Dennis</div>
