--- a/src/app/hero/header/header.component.html
+++ b/src/app/hero/header/header.component.html
@@ -30,7 +30,7 @@
 	</div>
 	<div class="header-logo-container">
 		<div class="header-logo">
-			<img src="favicon_dark_theme.png" alt="Logo">
+			<img src="/favicon_dark_theme.png" alt="Logo">
 		</div>
 		<div class="header-name-container">
 			<div class="header-logo-first-name">Dennis</div>
