--- a/src/app/portfolio/project-details-card/project-details-card.component.html
+++ b/src/app/portfolio/project-details-card/project-details-card.component.html
@@ -23,7 +23,7 @@
 						</div>
 					</div>
 				</a>
-				<a [href]="details.links.live" target="_blank" class="details-button">
+				<a [href]="details.links.live" target="_blank" rel="noopener noreferrer" class="details-button">
 					<div class="details-button-text-and-arrow-container">
 						<span>Live Test</span>
 						<div class="details-link-arrow-container">
