added fix to surpress autocomplete after chrome did still autofill contact-fields

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -14,7 +14,7 @@
 	<form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm" class="contact-form">
 		<div class="contact-form-container guests-name-container">
 			<h2>{{ translationService.getTranslation('contact', 'nameQuestion') }}</h2>
-			<input autocomplete="off" #name="ngModel" [(ngModel)]="contactData.name" name="name" type="text" required
+			<input autocomplete="nöope" #name="ngModel" [(ngModel)]="contactData.name" name="name" type="text" required
 				[placeholder]="(!name.valid && name.touched && !name.disabled && !focused.name) ?
                     translationService.getTranslation('contact', 'nameError') :
                     translationService.getTranslation('contact', 'namePlaceholder')" id="guests-name"
@@ -22,7 +22,7 @@
 		</div>
 		<div class="contact-form-container guests-email-container">
 			<h2>{{ translationService.getTranslation('contact', 'emailQuestion') }}</h2>
-			<input autocomplete="off" #email="ngModel" [(ngModel)]="contactData.email" name="email" type="email"
+			<input autocomplete="nöope" #email="ngModel" [(ngModel)]="contactData.email" name="email" type="email"
 				required [placeholder]="(!email.valid && email.touched && !email.disabled && !focused.email) ?
                 translationService.getTranslation('contact', 'emailRequired') :
                 translationService.getTranslation('contact', 'emailPlaceholder')" [pattern]="emailPattern"
@@ -33,7 +33,7 @@
 		</div>
 		<div class="contact-form-container" id="message-container">
 			<h2>{{ translationService.getTranslation('contact', 'messageQuestion') }}</h2>
-			<textarea autocomplete="off" #message="ngModel" [(ngModel)]="contactData.message" name="message" required
+			<textarea autocomplete="nöope" #message="ngModel" [(ngModel)]="contactData.message" name="message" required
 				[placeholder]="(!message.valid && message.touched && !message.disabled && !focused.message) ?
                     translationService.getTranslation('contact', 'messageError') :
                     translationService.getTranslation('contact', 'messagePlaceholder')"
