--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="privay-policy-container">
+<div class="privacy-policy-container">
 	<div class="content-wrapper">
 		<h1>{{ translationService.getTranslation('imprint', 'privacyPolicyTitle') }}</h1>
 		<div>
