--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -6,13 +6,14 @@
   background: linear-gradient(55.22deg, #1c1c1c 36.26%, #08463b 93.28%);
 }
 
-.privay-policy-container {
+.privacy-policy-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
   gap: 48px;
   min-height: 100vh;
+  max-width: 1920px;
   width: 100%;
   padding: 0 80px;
   margin-bottom: 48px;
